--- a/package.json
+++ b/package.json
@@ -4,8 +4,29 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+		"build": "electron-packager . test-electro --platform=win32 --arch=x64 --out=dist/ --overwrite --icon=assets/icon.ico"
   },
+	"build": {
+		"appId": "com.my-electron-app",
+		"productName": "MyElectronApp",
+		"files": [
+			"build/**/*",
+			"public/electron.js"
+		],
+		"directories": {
+			"buildResources": "assets"
+		},
+		"mac": {
+			"target": "dmg"
+		},
+		"win": {
+			"target": "nsis"
+		},
+		"linux": {
+			"target": "AppImage"
+		}
+	},
   "keywords": [],
   "author": "",
   "license": "ISC",
